bindings/go/marketdata/marketdata_uniffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
uint64_t uniffi_marketdata_uniffi_fn_method_stockownershipclient_get_tdcc_distribution(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer sort
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockownershipclient_institutional_trades_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer sort, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stockownershipclient_tdcc_distribution_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer sort, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_stocksnapshotclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_stocksnapshotclient(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_actives_sync(void* ptr, RustBuffer market, RustBuffer trade, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_get_actives(void* ptr, RustBuffer market, RustBuffer trade
);
uint64_t uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_get_movers(void* ptr, RustBuffer market, RustBuffer direction, RustBuffer change
);
uint64_t uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_get_quotes(void* ptr, RustBuffer market, RustBuffer type_filter
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_movers_sync(void* ptr, RustBuffer market, RustBuffer direction, RustBuffer change, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_quotes_sync(void* ptr, RustBuffer market, RustBuffer type_filter, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_stocktechnicalclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_stocktechnicalclient(void* ptr, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_bb_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustBuffer period, RustBuffer stddev, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_bb(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustBuffer period, RustBuffer stddev
);
uint64_t uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_kdj(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustBuffer r_period, RustBuffer k_period, RustBuffer d_period
);
uint64_t uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_macd(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustBuffer fast, RustBuffer slow, RustBuffer signal
);
uint64_t uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_rsi(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustBuffer period
);
uint64_t uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_sma(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustBuffer period
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_kdj_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustBuffer r_period, RustBuffer k_period, RustBuffer d_period, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_macd_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustBuffer fast, RustBuffer slow, RustBuffer signal, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_rsi_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustBuffer period, RustCallStatus *out_status
);
RustBuffer uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_sma_sync(void* ptr, RustBuffer symbol, RustBuffer from, RustBuffer to, RustBuffer timeframe, RustBuffer period, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_clone_websocketclient(void* ptr, RustCallStatus *out_status
);
void uniffi_marketdata_uniffi_fn_free_websocketclient(void* ptr, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_constructor_websocketclient_new(RustBuffer api_key, void* listener, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_config(RustBuffer api_key, void* listener, RustBuffer endpoint, RustBuffer reconnect_config, RustBuffer health_check_config, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_endpoint(RustBuffer api_key, void* listener, RustBuffer endpoint, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_full_config(RustBuffer api_key, void* listener, RustBuffer endpoint, RustBuffer base_url, RustBuffer reconnect_config, RustBuffer health_check_config, RustBuffer tls, RustBuffer version, RustCallStatus *out_status
);
void* uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_url(RustBuffer api_key, void* listener, RustBuffer endpoint, RustBuffer base_url, RustBuffer reconnect_config, RustBuffer health_check_config, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_websocketclient_connect(void* ptr
);
uint64_t uniffi_marketdata_uniffi_fn_method_websocketclient_disconnect(void* ptr
);
int8_t uniffi_marketdata_uniffi_fn_method_websocketclient_is_closed(void* ptr, RustCallStatus *out_status
);
int8_t uniffi_marketdata_uniffi_fn_method_websocketclient_is_connected(void* ptr, RustCallStatus *out_status
);
uint64_t uniffi_marketdata_uniffi_fn_method_websocketclient_ping(void* ptr, RustBuffer state
);
uint64_t uniffi_marketdata_uniffi_fn_method_websocketclient_query_subscriptions(void* ptr
);
uint64_t uniffi_marketdata_uniffi_fn_method_websocketclient_subscribe(void* ptr, RustBuffer channel, RustBuffer symbol
);