bindings/csharp/MarketdataUniffi/marketdata_uniffi.cs


    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stockownershipclient_get_tdcc_distribution(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @sort
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockownershipclient_institutional_trades_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @sort,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stockownershipclient_tdcc_distribution_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @sort,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_stocksnapshotclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_stocksnapshotclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_actives_sync(
        IntPtr @ptr,
        RustBuffer @market,
        RustBuffer @trade,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_get_actives(
        IntPtr @ptr,
        RustBuffer @market,
        RustBuffer @trade
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_get_movers(
        IntPtr @ptr,
        RustBuffer @market,
        RustBuffer @direction,
        RustBuffer @change
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_get_quotes(
        IntPtr @ptr,
        RustBuffer @market,
        RustBuffer @typeFilter
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_movers_sync(
        IntPtr @ptr,
        RustBuffer @market,
        RustBuffer @direction,
        RustBuffer @change,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stocksnapshotclient_quotes_sync(
        IntPtr @ptr,
        RustBuffer @market,
        RustBuffer @typeFilter,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_stocktechnicalclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_stocktechnicalclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_bb_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        RustBuffer @period,
        RustBuffer @stddev,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_bb(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        RustBuffer @period,
        RustBuffer @stddev
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_kdj(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        RustBuffer @rPeriod,
        RustBuffer @kPeriod,
        RustBuffer @dPeriod
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_macd(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        RustBuffer @fast,
        RustBuffer @slow,
        RustBuffer @signal
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_rsi(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        RustBuffer @period
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_get_sma(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        RustBuffer @period
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_kdj_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        RustBuffer @rPeriod,
        RustBuffer @kPeriod,
        RustBuffer @dPeriod,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_macd_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        RustBuffer @fast,
        RustBuffer @slow,
        RustBuffer @signal,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_rsi_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        RustBuffer @period,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern RustBuffer uniffi_marketdata_uniffi_fn_method_stocktechnicalclient_sma_sync(
        IntPtr @ptr,
        RustBuffer @symbol,
        RustBuffer @from,
        RustBuffer @to,
        RustBuffer @timeframe,
        RustBuffer @period,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_clone_websocketclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern void uniffi_marketdata_uniffi_fn_free_websocketclient(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_constructor_websocketclient_new(
        RustBuffer @apiKey,
        IntPtr @listener,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_config(
        RustBuffer @apiKey,
        IntPtr @listener,
        RustBuffer @endpoint,
        RustBuffer @reconnectConfig,
        RustBuffer @healthCheckConfig,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_endpoint(
        RustBuffer @apiKey,
        IntPtr @listener,
        RustBuffer @endpoint,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_full_config(
        RustBuffer @apiKey,
        IntPtr @listener,
        RustBuffer @endpoint,
        RustBuffer @baseUrl,
        RustBuffer @reconnectConfig,
        RustBuffer @healthCheckConfig,
        RustBuffer @tls,
        RustBuffer @version,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_constructor_websocketclient_new_with_url(
        RustBuffer @apiKey,
        IntPtr @listener,
        RustBuffer @endpoint,
        RustBuffer @baseUrl,
        RustBuffer @reconnectConfig,
        RustBuffer @healthCheckConfig,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_websocketclient_connect(
        IntPtr @ptr
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_websocketclient_disconnect(
        IntPtr @ptr
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_marketdata_uniffi_fn_method_websocketclient_is_closed(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern sbyte uniffi_marketdata_uniffi_fn_method_websocketclient_is_connected(
        IntPtr @ptr,
        ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_websocketclient_ping(
        IntPtr @ptr,
        RustBuffer @state
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_websocketclient_query_subscriptions(
        IntPtr @ptr
    );

    [DllImport("marketdata_uniffi", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr uniffi_marketdata_uniffi_fn_method_websocketclient_subscribe(
        IntPtr @ptr,
        RustBuffer @channel,
        RustBuffer @symbol
    );
